# ScientificComputing_A1

./: .gitignore  A1Config.h.in  CMakeLists.txt  README.md  Util.cpp  Util.h  main.cpp
Common/: CMakeLists.txt
Common/src/: Util.cpp
Q1/: CMakeLists.txt  pi-curand-thrust.cu  pi-curand.cu  pi-myrand.cu  pi-mystery.cu
Q2/: CMakeLists.txt  Common.cpp  Common.h  Makefile  Q2_run  main.cpp  main.cu  q2_cuda.cpp  q2_cuda.h
Q3/: CMakeLists.txt  Makefile  Q3_run  main.cpp  main.cu
Util/: CMakeLists.txt
Util/include/: Util.h
Util/src/: Util.cpp
Util2/: CMakeLists.txt
Util2/include/: Util.h
src/: Util.cpp
